Fixed menu items alignment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11429,6 +11429,11 @@ body {
   margin-right: 5px;
 }
 
+.alignpotjandriedubbeltjes {
+  position: absolute;
+  left: 5rem;
+}
+
 .slidee {
   font-family: "Oxygen", sans-serif;
 }
