--- a/resources/sass/_custom-cms.scss
+++ b/resources/sass/_custom-cms.scss
@@ -345,3 +345,7 @@ body {
 .margin-right {
     margin-right: 5px;
 }
+.alignpotjandriedubbeltjes {
+    position: absolute;
+    left: 5rem;
+}
